--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 
 ## Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
-AUTH_SECRET=
+AUTH_SECRET= "4dbf27923173e0f29ed873fe2060e010"
 
 ## Create a GitHub OAuth app here: https://docs.github.com/en/apps/oauth-apps/building-oauth-apps/creating-an-oauth-app
-OAUTH_CLIENT_KEY=
-OAUTH_CLIENT_SECRET=
+OAUTH_CLIENT_KEY= "5aeff5f09ec3b8c4236c"
+OAUTH_CLIENT_SECRET="ebc1781b1486a4458360017f19d2e44c4909683f"
 
 ## Support OAuth login on preview deployments, see: https://authjs.dev/guides/basics/deployment#securing-a-preview-deployment
 AUTH_REDIRECT_PROXY_URL=https://leerob.io/api/auth
